Доработаны операции с комментариями. Тесты