@@ -1,41 +1,59 @@
 package ru.otus.homework.popov.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.autoconfigure.security.SecurityProperties;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.test.context.support.WithMockUser;
+import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.web.context.WebApplicationContext;
 import ru.otus.homework.popov.controller.dto.CommentDto;
-import ru.otus.homework.popov.domain.Author;
-import ru.otus.homework.popov.domain.Book;
-import ru.otus.homework.popov.domain.Comment;
-import ru.otus.homework.popov.domain.Genre;
+import ru.otus.homework.popov.domain.*;
 import ru.otus.homework.popov.exception.BadRequestException;
 import ru.otus.homework.popov.exception.NotFoundException;
 
+import ru.otus.homework.popov.security.AuthenticationProvider;
+import ru.otus.homework.popov.security.SecurityConfiguration;
 import ru.otus.homework.popov.service.BookOperations;
 import ru.otus.homework.popov.service.CommentOperations;
+import ru.otus.homework.popov.service.UserService;
 
 
+import javax.servlet.FilterChain;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.doThrow;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(BookController.class)
-@ContextConfiguration(classes = BookController.class)
+@ContextConfiguration(classes = {BookController.class, SecurityConfiguration.class})
 class BookControllerTest {
 
     @Autowired
     private MockMvc mvc;
+
+    @MockBean
+    private UserService userService;
+
+    @MockBean
+    private AuthenticationProvider authenticationProvider;
 
     @MockBean
     private BookOperations bookOperations;
@@ -45,6 +63,9 @@ class BookControllerTest {
 
     @Autowired
     private ObjectMapper mapper;
+
+    @Autowired
+    private WebApplicationContext context;
 
     @DisplayName("должен корректно выводить список книг")
     @Test
@@ -99,10 +120,15 @@ class BookControllerTest {
     @DisplayName("должен корректно выдавать комментарии к книге")
     @Test
     void shouldCorrectGetComments() throws Exception {
-        var comment1 = "Comment1";
-        var comment2 = "Comment2";
-        var comments = Arrays.asList(new Comment("1", comment1, "Author1"), new Comment("2", comment2, "Author2"));
-        var commentDtos = Arrays.asList(new CommentDto("1", comment1, "Author1", "1"), new CommentDto("2", comment2, "Author2", "2"));
+        var commentText1 = "Comment1";
+        var commentText2 = "Comment2";
+        var comment1 = new Comment("1", commentText1, "Author1");
+        var comment2 = new Comment("2", commentText2, "Author2");
+        var book = new Book("1", "Title", new Author("1", "Author"), new Genre("1", "Genre"));
+        book.addComment(comment1);
+        book.addComment(comment2);
+        var comments = List.of(comment1, comment2);
+        var commentDtos = List.of(new CommentDto("1", commentText1, "Author1", "1"), new CommentDto("2", commentText2, "Author2", "1"));
 
         given(commentOperations.findByBookId(eq("1"))).willReturn(comments);
 
@@ -126,7 +152,7 @@ class BookControllerTest {
         var contentBody = mapper.writeValueAsString(newBook);
 
         mvc.perform(MockMvcRequestBuilders.put("/api/books").contentType(APPLICATION_JSON)
-                        .content(contentBody))
+                        .content(contentBody).with(user("admin").roles("ADMIN")))
                 .andExpect(status().isOk());
     }
 
@@ -147,14 +173,16 @@ class BookControllerTest {
         doThrow(new NotFoundException()).when(bookOperations).updateBook(newBook);
 
         mvc.perform(MockMvcRequestBuilders.put("/api/books").contentType(APPLICATION_JSON)
-                        .content(contentBody))
+                        .content(contentBody).with(user("admin").roles("ADMIN")))
                 .andExpect(status().isNotFound());
 
     }
 
+
     @DisplayName("должен корректно создавать книгу")
     @Test
     void shouldCorrectCreateBook() throws Exception {
+
         var authorName2 = "Author2";
         var authorId2 = "2";
         var genreName2 = "Genre2";
@@ -171,7 +199,7 @@ class BookControllerTest {
         var expected = mapper.writeValueAsString(bookCreated);
         given(bookOperations.createBook(eq(newBook))).willReturn(bookCreated);
         mvc.perform(MockMvcRequestBuilders.post("/api/books").contentType(APPLICATION_JSON)
-                        .content(contentBody))
+                        .content(contentBody).with(user("admin").roles("ADMIN")))
                 .andExpect(status().isOk())
                 .andExpect(content().json(expected));
     }
@@ -193,7 +221,7 @@ class BookControllerTest {
         doThrow(new BadRequestException()).when(bookOperations).createBook(newBook);
 
         mvc.perform(MockMvcRequestBuilders.post("/api/books").contentType(APPLICATION_JSON)
-                .content(contentBody))
+                .content(contentBody).with(user("admin").roles("ADMIN")))
                 .andExpect(status().isBadRequest());
 
     }
@@ -201,7 +229,7 @@ class BookControllerTest {
     @DisplayName("должен корректно удалять книгу")
     @Test
     void shouldCorrectDeleteBook() throws Exception {
-        mvc.perform(MockMvcRequestBuilders.delete("/api/books/1"))
+        mvc.perform(MockMvcRequestBuilders.delete("/api/books/1").with(user("admin").roles("ADMIN")))
                 .andExpect(status().isOk());
     }
 }
